--- a/nginx.conf
+++ b/nginx.conf
@@ -21,27 +21,26 @@ http {
         listen       80;
         server_name  creditagricoleasia.com www.creditagricoleasia.com;
 
-	     rewrite ^(.*)$ https://$host$1 permanent;
+	     #rewrite ^(.*)$ https://$host$1 permanent;
 
-	     #location / {
-         #     root   html;
-         #     index  index.html index.htm;
-         #}
+	     location / {
+              root   html;
+              index  index.html index.htm;
+         }
         
     }
 
-    server {
-        server_name creditagricoleasia.com www.creditagricoleasia.com;
-        listen 443;
-        ssl on;
-        ssl_certificate /etc/letsencrypt/live/creditagricoleasia.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/creditagricoleasia.com/privkey.pem;
-	    location / {
-            root   html;
-            index  index.html index.htm;
-        }
-
-    }
+    #server {
+    #    server_name creditagricoleasia.com www.creditagricoleasia.com;
+    #    listen 443;
+    #    ssl on;
+    #    ssl_certificate /etc/letsencrypt/live/creditagricoleasia.com/fullchain.pem;
+    #    ssl_certificate_key /etc/letsencrypt/live/creditagricoleasia.com/privkey.pem;
+	#    location / {
+    #        root   html;
+    #        index  index.html index.htm;
+    #    }
+    #}
 
 
 }
