--- a/nginx.conf
+++ b/nginx.conf
@@ -31,7 +31,7 @@ http {
     }
 
     server {
-        server_name creditagricoleasia.com www.creditagricoleasia.com;
+        server_name creditagricoleasia.com;
         listen 443;
         ssl on;
         ssl_certificate /etc/letsencrypt/live/creditagricoleasia.com/fullchain.pem;
@@ -41,6 +41,18 @@ http {
             index  index.html index.htm;
         }
     }
+
+    server {
+            server_name www.creditagricoleasia.com;
+            listen 443;
+            ssl on;
+            ssl_certificate /etc/letsencrypt/live/www.creditagricoleasia.com/fullchain.pem;
+            ssl_certificate_key /etc/letsencrypt/live/www.creditagricoleasia.com/privkey.pem;
+    	    location / {
+                root   html;
+                index  index.html index.htm;
+            }
+        }
 
 
 }
