--- a/nginx.conf
+++ b/nginx.conf
@@ -19,40 +19,40 @@ http {
 
     server {
         listen       80;
-        server_name  creditagricoleasia.com www.creditagricoleasia.com;
+        server_name  ca-agricoleasia.com www.ca-agricoleasia.com;
 
-	     rewrite ^(.*)$ https://$host$1 permanent;
+	     #rewrite ^(.*)$ https://$host$1 permanent;
 
-	     #location / {
-         #     root   html;
-         #     index  index.html index.htm;
-         #}
+	     location / {
+              root   html;
+              index  index.html index.htm;
+         }
         
     }
 
-    server {
-        server_name creditagricoleasia.com;
-        listen 443;
-        ssl on;
-        ssl_certificate /etc/letsencrypt/live/creditagricoleasia.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/creditagricoleasia.com/privkey.pem;
-	    location / {
-            root   html;
-            index  index.html index.htm;
-        }
-    }
+    #server {
+    #    server_name ca-agricoleasia.com;
+    #    listen 443;
+    #    ssl on;
+    #    ssl_certificate /etc/letsencrypt/live/ca-agricoleasia.com/fullchain.pem;
+    #    ssl_certificate_key /etc/letsencrypt/live/ca-agricoleasia.com/privkey.pem;
+	#    location / {
+    #        root   html;
+    #        index  index.html index.htm;
+    #    }
+    #}
 
-    server {
-            server_name www.creditagricoleasia.com;
-            listen 443;
-            ssl on;
-            ssl_certificate /etc/letsencrypt/live/www.creditagricoleasia.com/fullchain.pem;
-            ssl_certificate_key /etc/letsencrypt/live/www.creditagricoleasia.com/privkey.pem;
-    	    location / {
-                root   html;
-                index  index.html index.htm;
-            }
-        }
+    #server {
+    #        server_name www.ca-agricoleasia.com;
+    #        listen 443;
+    #        ssl on;
+    #        ssl_certificate /etc/letsencrypt/live/www.ca-agricoleasia.com/fullchain.pem;
+    #        ssl_certificate_key /etc/letsencrypt/live/www.ca-agricoleasia.com/privkey.pem;
+   # 	    location / {
+   #             root   html;
+   #             index  index.html index.htm;
+   #         }
+   #     }
 
 
 }
